# jsonto

./: Cargo.toml  README.md
src/: generation.rs  lib.rs  options.rs  shape.rs  word_case.rs
src/generation/: python.rs  rust.rs  schema.rs  typescript_iface.rs  typescript_types.rs  value.rs
src/inference/: jsoninfer.rs  jsonlex.rs
