[package]
name = "jsonto"
version = "0.1.0"
edition = "2021"
authors = ["atopx"]
license = "MIT"
readme = "README.md"
description = "json string to frequently used programming languages type, it's lightweight and fast"
keywords = ["json", "type", "transform", "jsonto"]
repository = "https://github.com/atopx/jsonto"

[dependencies]
thiserror = "1.0"
linked-hash-map = "0.5.4"
syn = { version = "1.0.107", features = ["full", "parsing"], optional = true }
synom = { version = "0.11.3", optional = true }
