[package]
name = "jsonto"
version = "0.1.1"
edition = "2021"
authors = ["atopx"]
license = "MIT"
readme = "README.md"
description = "json string to frequently used programming languages type, it's lightweight and fast"
keywords = ["json", "type", "transform", "jsonto"]
repository = "https://github.com/atopx/jsonto"

[dependencies]
thiserror = "1.0"
linked-hash-map = "0.5.4"
